fixed flex wrap on services

--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,13 @@
 }
 
 .content_style {
-    overflow-y: scroll;
-    height: 100%;
+    /* overflow-y: scroll;
+    height: 100%; */
+    display: flex;
+    flex-wrap: wrap;
+    margin: -0.5em auto;
+    width: 90%;
+    max-width: 60em;
 }
 
 .wbackground_style {
@@ -52,11 +57,10 @@
     color: #FFFFFF;
 }
 
-.service_style {
+.client_style {
     display: flex;
     flex-wrap: wrap;
     max-width: 70%;
-    justify-content: space-evenly;
     color: #FFFFFF;
     padding-left: 2%;   
     padding-right: 2%;
@@ -67,7 +71,7 @@
         display: flex;
         flex: 1;
         flex-direction: row;
-        height:600px;
+        /* height:600px; */
     }
 
     .content_container_style_2 {
@@ -79,7 +83,7 @@
     .content_right_style {
         flex: 1;
         order: -1;
-        min-height: 0;
+        /* min-height: 0; */
     }
 
     .content_left_style {
@@ -115,6 +119,7 @@ button {
 
 .accordian {
     flex: 1 0 29em;
+    flex-direction: column;
 }
 
 .accordian input {
@@ -129,7 +134,6 @@ button {
 
 .accordian label {
     font-weight: bold;
-    /* text-transform: uppercase; */
     font-size: 16px;
     padding: 0.5em 1em;
     cursor: pointer;
